--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -4,48 +4,49 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script>
-        function validate() {
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
-            if ((email == '') || (password == '')) {
-                alert('Заполните поля');
-            }
-            let paramet = new Map();
-            map.set("email", email);
-            map.set("password", password);
-            return map;
-        }
-
-        function sendToServlet() {
-            let params = validate();
-            if (params != null) {
-                $.ajax({
-                    type: "POST",
-                    url: "http://localhost:8082/users/sign-in",
-                    data: { login: params.get("name"), password: params.get("password") } // здесь надо json организовать
-                }).done(function( msg ) {
-                    alert( "Data Saved: " + msg );
-                });
-            }
-        }
-    </script>
 
     <title>Title</title>
 </head>
 <body>
+<script>
+    function validate() {
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+        if ((email == '') || (password == '')) {
+            alert('Заполните поля');
+        }
+        let map = new Map();
+        map.set("email", email);
+        map.set("password", password);
+        return map;
+    }
+
+    function sendToServlet() {
+        let params = validate();
+        if (params != null) {
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8082/users/sign-in",
+                dataType : "json",
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({login: params.get("email"), password: params.get("password"), id: "0"})
+            }).done(function( msg ) {
+                alert( "Data Saved: " + msg );
+            });
+        }
+    }
+</script>
 <div class="container pt-3">
 
     <div class="row">
@@ -54,7 +55,7 @@
                 Авторизация
             </div>
             <div class="card-body">
-                <form action="/users/sign-in" method="post">
+                <form action="sendToServlet()" method="get">
                     <div class="form-group">
                         <label>Почта</label>
                         <input required type="text" class="form-control" id="email" name="email">
@@ -63,7 +64,7 @@
                         <label>Пароль</label>
                         <input required type="text" class="form-control" id="password" name="password">
                     </div>
-                    <button type="submit" class="btn btn-primary" onclick="sendToServlet()">Войти</button>
+                    <button type="button" class="btn btn-primary" onclick="sendToServlet()">Войти</button>
                 </form>
 
                 <form action="/registry.html" method="get">
