--- a/src/main/resources/static/registry.html
+++ b/src/main/resources/static/registry.html
@@ -4,16 +4,17 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 
     <title>Title</title>
 </head>
@@ -29,7 +30,6 @@
             map.set("name", name);
             map.set("email", email);
             map.set("password", password);
-            alert(map);
             return map;
         }
         return -1;
@@ -41,9 +41,11 @@
             $.ajax({
                 type: "POST",
                 url: "http://localhost:8082/users/sign-up",
-                data: {  login: params.get("email"), password: params.get("password") } // здесь надо json организовать
-            }).done(function( msg ) {
-                alert( "Data Saved: " + msg );
+                dataType : "json",
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({login: params.get("email"), password: params.get("password"), id: "0"})
+            }).done(function(msg) {
+                alert( "Data Saved: ");
             });
         }
     }
@@ -64,7 +66,7 @@
                         <input required type="text" class="form-control" name="name" id="name">
                     </div>
                     <div class="form-group">
-                        <label>Почта</label>
+                        <label>Логин</label>
                         <input required type="text" class="form-control" name="email" id="email">
                     </div>
                     <div class="form-group">
