--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -42,7 +42,8 @@
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({login: params.get("email"), password: params.get("password"), id: "0"})
             }).done(function(data, textStatus, jqXHR) {
-                alert(data.toString());
+                alert(jqXHR.getAllResponseHeaders());
+                alert(jqXHR.getResponseHeader("authorization"));
             })
                 .fail(function (jqXHR, textStatus, errorThrown) {
                     alert("Failed: " + errorThrown);
