--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -36,22 +36,35 @@
         let params = validate();
         if (params != null) {
             $.ajax({
-                type: "POST",
+                type: "post",
                 url: "http://localhost:8082/login",
                 dataType : "text",
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({login: params.get("email"), password: params.get("password"), id: "0"})
             }).done(function(data, textStatus, jqXHR) {
-                alert(jqXHR.getAllResponseHeaders());
-                alert(jqXHR.getResponseHeader("authorization"));
+                var tokenBearer = jqXHR.getResponseHeader("authorization").split(" ");
+                var token = tokenBearer[1];
+                redirectToUrl(window.location.host + "/index", token);
             })
                 .fail(function (jqXHR, textStatus, errorThrown) {
                     alert("Failed: " + errorThrown);
-                }).always(function (a, textStatus, b) {
-                //alert("Final status: " + textStatus);
-
-            });
+                });
         }
+    }
+
+    function redirectToUrl(urlTo, token) {
+        $.ajax({
+            type: 'get',
+            url: "http://" + urlTo,
+            contentType: 'application/json',
+            beforeSend: function (xhr) {
+                xhr.setRequestHeader("Authorization", "Bearer " + token);
+               sessionStorage.setItem("Auth", token);
+            }
+        }).done(function (a) {
+            $('body').html( a );
+        });
+
     }
 </script>
 <div class="container pt-3">
