--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
       })
     function fillIndex() {
       $.ajax({
-        type: "GET",
+        type: "get",
         url: "http://localhost:8082/rooms/all",
         dataType: "json",
         beforeSend: function (xhr) {
@@ -48,29 +48,40 @@
                   .after('<tr><th scope="row">' + roomName + '</th><td>'
                   + creatorName + '</th>'
                   + '<td id="message__date">'
-                         + '<button className="button" name="enter_in_room" id="enter_in_room" onclick="redirectToRoom(' + roomNumber
+                         + '<button type="button" class="btn btn-primary" onclick="redirectToRoom('
+                      + roomNumber.toString()
                       + ')">Войти</button>'
-                  + '</td></tr>');
+                      + '</td></tr>');
           });
 
       });
     }
 
-      function redirectToRoom(userLogin, urlTo, token) {
-          $.ajax({
-              type: 'get',
-              url: "http://" + urlTo,
+      function redirectToRoom(toRoom) {
+              $.ajax({
+              type: "get",
+              url: "http://" + window.location.host + "/room",
               contentType: "text/css",
               beforeSend: function (xhr) {
-                  xhr.setRequestHeader("Authorization", "Bearer " + token);
-                  sessionStorage.setItem("Auth", token);
-                  sessionStorage.setItem("userLogin", userLogin);
-
+                  xhr.setRequestHeader("Authorization", "Bearer " + sessionStorage.getItem("Auth"));
+                  sessionStorage.setItem("toRoomId", toRoom);
               }
-          }).done(function (a) {
-              $('body').html( a );
+          }).done(function (ob) {
+          $('body').html(ob);
           });
+      }
 
+      function addRoom() {
+          $.ajax({
+              type: "get",
+              url: "http://localhost:8082/addRoom",
+              ContentType: "text/css",
+              beforeSend: function (xhr) {
+                  xhr.setRequestHeader("Authorization", 'Bearer '+ sessionStorage.getItem("Auth"));
+              }
+          }).done(function (ob) {
+              $('body').html(ob);
+          });
       }
   </script>
 
@@ -81,6 +92,8 @@
             <h3 class="profile__name" name="userName" id="user__name">Григорий Григорьев</h3>
         </div>
         
+        <hr class="hr__line">
+        <input type="button" onclick="addRoom()" class="btn btn-primary" value="Добавить комнату" name="refresh__rooms" id="refresh__rooms__btn">
         <hr class="hr__line">
 
         <div class="header__table">
@@ -102,21 +115,6 @@
 
         <hr class="hr__line">
 
-        <input type="button" onclick="fillIndex()" class="refresh__accessible__rooms" value="Обновить" name="refresh__rooms" id="refresh__rooms__btn">
-
     </form>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
