--- a/src/main/resources/static/registry.html
+++ b/src/main/resources/static/registry.html
@@ -40,7 +40,7 @@
         if ((params != null) && (params != -1)) {
             $.ajax({
                 type: "POST",
-                url: "http://localhost:8082/users/sign-up",
+                url: "http://" + window.location.host + "/users/sign-up",
                 dataType : "json",
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({login: params.get("email"), password: params.get("password"), name: params.get("name"), id: "0"})
